??/??/2007 autofs-5.0.2
-----------------------
- fix return check for getpwuid_r and getgrgid_r.
- give up trying to update exports list while host is mounted.

20/2/2007 autofs-5.0.1
----------------------
- fix typo in Fix typo in var when removing temp directory.
- remove redundant rpath link option.
- ignore "winbind" if it appears in "automount" nsswitch.conf.
- fix another expire regression introduced in the "mitigate manual umount" patch.
- correct check for busy offset mounts before offset umount.
- make double quote handing consistent.
- fix handling of trailing white space in wildcard lookup.
- check fqdn of each interface when matching export access list.
- fix race when setting task done.
- correct return status from do_mkdir.
- fix localhost replicated mounts not working.
- add "condrestart" to RedHat init script.
- add "@network" and .domain.name export check.
- fix display map name in mount entry for "-hosts" map.
- update kernel patches.

4/1/2007 autofs-5.0.1 rc3
-------------------------
- fix handling of autofs specific mount options.
- fix include check full patch for file map of same name.
- fix cache entrys not being cleaned up on submount expire.
- fix LDAP lookup delete cache entry only if entry doesn't exist. 
- add missing socket close in replicated host check (Jeff Moyer).
- remove unused option UNDERSCORETODOT from default config files.
- make default installed master map for /net use "-hosts" instead
  of auto.net.
- fix included map recursive map key lookup.
  - and fix the recursive map key lookup for browsable map case.
- review and fix master map options update for map reload.
- fix "-fstype=nfs4" handling.
- fix get_query_dn not looking in subtree for LDAP search.
- allow syntax "--timeout <secs>" for backward compatibility.
- make masked_match independent of hostname for exports comparison.
- fix file handle leak in nsswitch parser.
- fix memory leak in mount and expire request processing.