@@ -2,6 +2,7 @@
 -----------------------
 - fix return check for getpwuid_r and getgrgid_r.
 - give up trying to update exports list while host is mounted.
+- fix to "@network" matching.
 
 20/2/2007 autofs-5.0.1
 ----------------------
